--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -10,10 +10,9 @@
         
     <form id = "form" action="/upload" method="POST" enctype="multipart/form-data">
         <input id = "file" type="file" name="archivo">
+        <input id = "numero" type = "number" name = "Kfotos">
         <input type="submit">
     </form>    
-        
-    <script src = {{url_for('static', filename='/js/index.js')}}></script>
 </body>
 </html>
    
