--- a/frontend/html/result.html
+++ b/frontend/html/result.html
@@ -8,6 +8,7 @@
         <h1>HOLA</h1>
         <div id = "results">
             {% for i in data %}
+                <div><img src ="../../backend/" + {{i[0]}}></div>
             {% endfor %}
         </div>
     </body>
