--- a/frontend/html/result.html
+++ b/frontend/html/result.html
@@ -3,13 +3,44 @@
     <head>
         <title>Resultados</title>
         <meta charset="UTF-8">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='frontend/css/stylesIndex.css') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='frontend/src/logoico.png') }}"> 
     </head>
     <body>
-        <h1>HOLA</h1>
-        <div id = "results">
+        <div class = "entry">
+        <a class = "logo" href = "http://127.0.0.1:5050/"><img src ="{{url_for('static', filename='/frontend/src/Logo.png')}}" width="500" ></a>
+        </div>
+        <div class = "resultP">
+        <h1 class = "h1" style = "margin-left: 15px;">Resultados para:</h1>
+        <div class="card" style="width: 18rem; margin-left: 15px;">
+            <img src = "{{url_for('static', filename='instance/Uploads/' + name)}}"class="card-img-top" alt="Result">
+            <div class="card-body">
+              <p class="card-text">File name: {{name}}</p>
+            </div>
+          </div>
+        </div>
+        
+        <br>
+        <div class = "queryRes">
+        <h2 style = "color:white;">Los resultados más parecidos son:</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
             {% for i in data %}
-                <div><img src ="../../backend/" + {{i[0]}}></div>
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="{{url_for('static', filename='backend/' + i[0])}}" class="card-img-top" alt="{{i[1]}}">
+                      <div class="card-body">
+                        <h5 class="card-title">File name: {{i[1]}} </h5>
+                        <p class="card-text">Score total: {{i[2]}}</p>
+                      </div>
+                    </div>
+                  </div>
             {% endfor %}
         </div>
+    </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
